# new-p-voice-ai-v3

./: .gitignore  README.md  RUN_ALL.txt  agent_memory.py  agent_reasoner.py  agent_state.py  agent_transitions.py  execution_controller_agent.py  generate_latency_report.py  plot_latency_from_consolidated.py  pyproject.toml  python_main.py  run_generate_latency.py  run_plot_latency.py  runtime_resources.py
Basic_Compliance_Document/: Compliance_Document.docx
Basic_Compliance_Document /: Compliance_Document.docx
Basic_Installation_Guidelines/: Installations_and_dependencies.txt
Business_Requirement_Document_[BRD]/: BRG_Simplified.docx
Data_Base/: _ground_truth.xlsx  _master_sheet.xlsx
Data_Base/Raw_Audios/: 1.m4a  10.m4a  11.m4a  12.m4a  13.m4a  14.m4a  15.m4a  16.m4a  17.m4a  18.m4a  19.m4a  2.m4a  20.m4a  21.m4a  22.m4a  24.m4a  25.m4a  26.m4a  27.m4a  29.m4a  3.m4a  30.m4a  31.m4a  32.m4a  33.m4a  34.m4a  35.m4a  36.m4a  37.m4a  38.m4a  39.m4a  4.m4a  40.m4a  41.m4a  42.m4a  43.m4a  44.m4a  45.m4a  46.m4a  47.m4a  (+9 more)
USER_SOP/: SOP_Standard_Operating_Procedure.docx
data_pipeline/: audio_quality_matrix.py  phase_A_audio_preprocessing.py  phase_B_transcription.py  plot_lufs_quality_corridor.py  run_audio_quality_matrix.py  run_phase_A.py  run_phase_B.py
data_pipeline/artifacts/: audio_latency.csv  audio_latency_stats.json
data_pipeline/configs/: audio_preprocess_config.yaml
data_pipeline/phase_C_structured_boundary_extraction/: alias_registry.py  boundary_rules.py  extractor.py  run_phase_C.py  snapshot_loader.py
data_pipeline/utils/: audio_utils.py
(+237 files in other folders)
