[project]
name = "new-p-voice-ai-v2"
version = "0.1.0"
description = "Python 3.10.19 STT & ML pipeline with Whisper and CPU-safe torch"
readme = "README.md"
requires-python = "==3.10.19"

dependencies = [
    # --- Core AI & Hardware Management ---
    "openai-whisper==20231117",
    "torch==2.1.2",
    "psutil>=5.9.0",              # Added for your new Manager
    "transformers>=4.40.0",
    "sentence-transformers>=2.6.0",
    # --- Audio Processing & Signal Cleaning ---
    "librosa>=0.11.0",
    "pyloudnorm>=0.1.1",
    "noisereduce>=3.0.3",
    "pydub>=0.25.1",
    "soundfile>=0.12",
    "scipy>=1.10,<2.0",
    # --- Data Science & Metrics ---
    "pandas>=2.0,<3.0",
    "numpy>=1.23,<2.0",           # Correctly pinned to avoid 2.0 breaks
    "scikit-learn>=1.5.0",        # Adjusted to current stable
    "openpyxl>=3.1.5",
    "jiwer>=4.0.0",               # Excellent for Word Error Rate (WER)
    # --- Visualization ---
    "matplotlib>=3.10.0",
    "seaborn>=0.13.2",
    "accelerate>=1.12.0",
]
